syntax = "proto3";

package social.post.v1;


// enum definitions

enum MediaType {
  MEDIA_TYPE_UNSPECIFIED = 0;
  IMAGE = 1;
  VIDEO = 2;
}

// Message definitions

message User {
  string id = 1;
  string name = 2;
  string avatar = 3;
  optional string title = 4;
}

message ImageTransform {
  double rotation = 1;
  bool flipH = 2;
  bool flipV = 3;
  double zoom = 4;
  double straighten = 5;
  string aspectRatio = 6;
  string filter = 7;
  double brightness = 8;
  double contrast = 9;
  double saturation = 10;
  double temperature = 11;
  double highlights = 12;
  double shadows = 13;
  string altText = 14;
}

message VideoTransform {
  // Add video transform fields if needed
}

message PollOption {
  int32 id = 1;
  string text = 2;
}

message Poll {
  string question = 1;
  repeated PollOption options = 2;
  int32 durationDays = 3;
}

message Transform {
  oneof data {
    ImageTransform image = 1;
    VideoTransform video = 2;
  }
}

message Media {
  string id = 1;
  string type = 2;
  string name = 3;
  string url = 4;
  repeated User taggedUsers = 5;
  Transform transform = 6;
}

message Attachments {
  string id = 1;              // Unique identifier for the media
  string post_id = 2;         // Nullable field, mapped as optional string
  string type = 3;         // Type of media (IMAGE or VIDEO)
  string url = 4;             // URL of the media
  string created_at = 5;  // Date of creation
}


message FeedUserProfileDetiles {
  string username = 1;
  string name = 2;
  string avatar = 3;
}

message ListPosts {
  string id = 1;
  string userId = 2;
  string type = 3;
  string content = 4;
  repeated string tags = 5;
  repeated Media imageMedia = 6;
  repeated Media videoMedia = 7;
  string visibility = 8;
  string commentControl = 9;
  string createdAt = 10; // store as ISO string or timestamp
  string updatedAt = 11; // store as ISO string or timestamp
  FeedUserProfileDetiles user = 12;
}

message Post {
  string id = 1;
  string content = 2;
  string userId = 3;
  string createdAt = 4;
  FeedUserProfileDetiles user = 5;
  repeated Attachments attachments = 6;
  PostEngagement engagement = 7;
}

message PostEngagement {
  int32 likesCount = 1;
  int32 commentsCount = 2;
  int32 sharesCount = 3;
  bool isLiked = 4;
  bool isShared = 5;
}


// Request & Response

message CreatePostRequest {
  string content = 1;
  repeated Media media = 2;
  optional Poll poll = 3;
  string visibility = 4;
  string commentControl = 5;
  string type = 6;
  string userId = 7;
}

message CreatePostResponse {
  string postId  = 1;
  string message = 2;
}

message ListPostsRequest {
  optional string pageParam = 1;
  optional string userId = 2;
}

message ListPostsResponse{
  repeated Post pages  = 1;
  optional string nextCursor = 2;
}

message UploadMediaRequest {
  string url = 1;
  string type = 2;
}

message UploadMediaResponse {
  string mediaId = 1;
}

message SubmitPostRequest {
  string content = 1;
  string userId = 2;
  repeated string mediaIds = 3;
  string visibility = 4; // ✅ FIXED P0-2: Add visibility (PUBLIC, VISIBILITY_CONNECTIONS)
  string commentControl = 5; // ✅ FIXED P0-2: Add commentControl (ANYONE, CONNECTIONS, NONE)
}

message SubmitPostResponse {
  string id = 1;
  string content = 2;
  string userId = 3;
}

message DeletePostRequest {
  string postId = 1;
}

message DeletePostResponse {
  string id = 1;
  string content = 2;
  string userId = 3;
  string createdAt = 4;
}

message DeleteUnusedMediasRequest {}

message DeleteUnusedMediasResponse {
  string message = 1;
  int32 deleted_count = 2;
  bool success = 3;
}



// Report messages
message ReportPostRequest {
  string post_id = 1;
  string user_id = 2;
  string reason = 3; // ReportReason enum as string
  optional string description = 4;
  string idempotency_key = 5;
}

message ReportPostResponse {
  bool success = 1;
  string report_id = 2;
  string message = 3;
}

// Share link messages
message GetPostShareLinkRequest {
  string post_id = 1;
  string user_id = 2;
  bool generate_short = 3;
  bool is_private = 4;
}

message GetPostShareLinkResponse {
  string canonical_url = 1;
  optional string short_url = 2;
  optional string share_token = 3;
  optional int64 expires_at = 4;
}

message ResolveShareLinkRequest {
  string token_or_short_id = 1;
}

message ResolveShareLinkResponse {
  string post_id = 1;
  string redirect_url = 2;
}

// Share post messages
message SharePostRequest {
  string original_post_id = 1;
  string user_id = 2;
  string share_type = 3; // ShareType enum as string
  optional string comment = 4;
  string visibility = 5; // PostVisibility enum as string
  optional string shared_to_user_id = 6; // For PRIVATE_MESSAGE
  string idempotency_key = 7;
}

message SharePostResponse {
  bool success = 1;
  string share_id = 2;
  Share share = 3;
}

message Share {
  string id = 1;
  string post_id = 2;
  string user_id = 3;
  string share_type = 4;
  optional string caption = 5;
  string visibility = 6;
  string created_at = 7;
}

// Edit post messages
message EditPostRequest {
  string post_id = 1;
  string user_id = 2;
  optional string content = 3;
  repeated string add_attachment_ids = 4;
  repeated string remove_attachment_ids = 5;
  string idempotency_key = 6;
}

message EditPostResponse {
  bool success = 1;
  Post post = 2;
  int32 new_version_number = 3;
}

message GetPostVersionsRequest {
  string post_id = 1;
  string user_id = 2;
}

message GetPostVersionsResponse {
  repeated PostVersion versions = 1;
}

message PostVersion {
  string id = 1;
  string post_id = 2;
  int32 version_number = 3;
  string content = 4;
  repeated string attachment_ids = 5;
  string edited_at = 6;
  string edited_by_id = 7;
}

message RestorePostVersionRequest {
  string post_id = 1;
  int32 version_number = 2;
  string user_id = 3;
}

message RestorePostVersionResponse {
  bool success = 1;
  Post post = 2;
}

// Service definition

service PostService {
  // rpc CreatePost (CreatePostRequest) returns (CreatePostResponse);
  rpc ListPosts (ListPostsRequest) returns (ListPostsResponse);
  rpc UploadMedia (UploadMediaRequest) returns (UploadMediaResponse);
  rpc SubmitPost (SubmitPostRequest) returns (SubmitPostResponse);
  rpc DeletePost (DeletePostRequest) returns (DeletePostResponse);
  rpc DeleteUnusedMedias (DeleteUnusedMediasRequest) returns (DeleteUnusedMediasResponse);
  
  // New endpoints for production features
  rpc ReportPost (ReportPostRequest) returns (ReportPostResponse);
  rpc GetPostShareLink (GetPostShareLinkRequest) returns (GetPostShareLinkResponse);
  rpc ResolveShareLink (ResolveShareLinkRequest) returns (ResolveShareLinkResponse);
  rpc SharePost (SharePostRequest) returns (SharePostResponse);
  rpc EditPost (EditPostRequest) returns (EditPostResponse);
  rpc GetPostVersions (GetPostVersionsRequest) returns (GetPostVersionsResponse);
  rpc RestorePostVersion (RestorePostVersionRequest) returns (RestorePostVersionResponse);
}